# IMACMAN

./: CONSIGNES.md  README.md
Code/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  test_daphne.txt
Code/IMACMAN_src/: CMakeLists.txt  Makefile  SDLtemplate.cpp  cmake_install.cmake  main.cpp  main2.cpp  main2.cpp.bak  test.cpp  testMap.cpp  testMap.cpp.bak  testTexture.cpp  text.cpp
Code/IMACMAN_src/shaders/: 3D.vs.glsl  CubeMap.fs.glsl  blackAndWhite.fs.glsl  cubeMap.fs.glsl  cubeMap.vs.glsl  directionallight.fs.glsl  directionnalLightTex.fs.glsl  multiTex3D.fs.glsl  normal.fs.glsl  pointlight.fs.glsl  tex3D.fs.glsl  text.fs.glsl  text.vs.glsl
Code/assets/models/: snapchat_old.mtl
Code/assets/models/ghost/: snapchat.mtl
Code/data/: classicMap.txt  mapTest.txt  save_classicMap.txt  save_mapTest.txt
Code/glimac/: CMakeLists.txt  Makefile  cmake_install.cmake
Code/glimac/include/glimac/: BBox.hpp  Camera.hpp  Cone.hpp  Cube.hpp  FilePath.hpp  FreeflyCamera.hpp  Geometry.hpp  Image.hpp  Plane.hpp  Program.hpp  SDLWindowManager.hpp  Shader.hpp  Sphere.hpp  TrackballCamera.hpp  common.hpp  glm.hpp
Code/glimac/include/project/: AudioManager.hpp  AudioManager.hpp.bak  Cell.hpp  Character.hpp  Controller.hpp  CubeMap.hpp  Door.hpp  Edible.hpp  Freetype.hpp  GLSLProgram.hpp  GameManager.hpp  Ghost.hpp  Level.hpp  Map.hpp  Menu.hpp  Object.hpp  Pacman.hpp  Player.hpp  RenderManager.hpp  StaticObject.hpp  Text.hpp  Text.hpp.bak  Texture.hpp  UI.hpp  Utilities.hpp  Wall.hpp  hello.hpp
Code/glimac/src/: SDLWindowManager.cpp  Shader.cpp  Sphere.cpp
Code/glimac/src/glimac/: Cone.cpp  Cube.cpp  FreeflyCamera.cpp  Geometry.cpp  Image.cpp  Plane.cpp  Program.cpp  SDLWindowManager.cpp  Sphere.cpp  TrackballCamera.cpp  common.cpp
Code/glimac/src/project/: AudioManager.cpp  Cell.cpp  Character.cpp  Controller.cpp  CubeMap.cpp  Door.cpp  Edible.cpp  Freetype.cpp  GameManager.cpp  Ghost.cpp  Map.cpp  Menu.cpp  Object.cpp  Pacman.cpp  Player.cpp  RenderManager.cpp  StaticObject.cpp  Text.cpp  Text.cpp.bak  Texture.cpp  UI.cpp  Wall.cpp  hello.cpp
